# ml-intern-revision

./: .gitignore  AGENTS.md  HANDOFF.md  ML_WORKFLOW_ARCHITECTURE.md  PROJECT_KNOWLEDGE.md  README.md  README2.md  RESEARCH_SUMMARY.md  extract_pptx.py  extract_pptx_v2.py  pyproject.toml
ces_prediction/: __init__.py  automl_agent_loop.py  dataset.py  fixed_train_split.csv  fixed_val_split.csv  inspect_dataset.py  inspect_split.py  model.py  run_fast_exploration.ps1  run_smoke_test.ps1  slack_notifier.py  split_manifest.json  test_slack.py  train.py
requirements/: INSTRUCTIONS.md
tests/: test_architecture.py
