[project]
name = "kstar-ces-prediction"
version = "0.1.0"
description = "KSTAR CES multimodal prediction training pipeline"
readme = "README2.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "slack_sdk>=3.33.0",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ces_prediction*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
